Enable 6ul series watchdog, and custom logo

--- a/arch/arm/configs/ts_imx_defconfig
+++ b/arch/arm/configs/ts_imx_defconfig
@@ -3523,6 +3523,7 @@ CONFIG_WATCHDOG_CORE=y
 # CONFIG_ZIIRAVE_WATCHDOG is not set
 # CONFIG_CADENCE_WATCHDOG is not set
 # CONFIG_DW_WATCHDOG is not set
+CONFIG_TS_WDT_MICRO=y
 # CONFIG_MAX63XX_WATCHDOG is not set
 CONFIG_IMX2_WDT=y
 CONFIG_IMX7ULP_WDT=y
@@ -4204,6 +4205,7 @@ CONFIG_LOGO=y
 CONFIG_LOGO_LINUX_MONO=y
 CONFIG_LOGO_LINUX_VGA16=y
 CONFIG_LOGO_LINUX_CLUT224=y
+CONFIG_LOGO_USER_CLUT224=y
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
