--- a/arch/arm/boot/dts/imx6qdl-ts4900-ts8390.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-ts4900-ts8390.dtsi
@@ -185,6 +185,11 @@
 	usbeth: smsc95xx {
 		status = "okay";
 	};
+
+	v4l2_out {
+		compatible = "fsl,mxc_v4l2_output";
+		status = "okay";
+	};
 };
 
 &audmux {
