TS-7180: Added support for the i2c interface on the daughter-card interface (HD1).

--- a/arch/arm/boot/dts/imx6ul-ts7180.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7180.dts
@@ -112,6 +112,26 @@
 
 	};
 
+
+	i2c_gpio@0 {
+		compatible = "i2c-gpio";
+		clock-frequency = <100000>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c_gpio>;
+
+		gpios = <
+			&gpio3 9 GPIO_ACTIVE_LOW /* I2C_DAT on HD1 pin 9*/
+			&gpio3 8 GPIO_ACTIVE_LOW /* I2C_CLK on HD1 pin 14 */
+			>;
+
+		status = "okay";
+		i2c-gpio,sda-open-drain;
+		i2c-gpio,scl-open-drain;
+		i2c-gpio,delay-us = <2>;	/* ~100 kHz */
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+	};
 };
 
 &cpu0 {
@@ -376,6 +396,8 @@
 	};
 };
 
+
+
 &snvs_poweroff {
 	status = "okay";
 };
@@ -594,6 +616,13 @@
 			fsl,pins = <
 				MX6UL_PAD_LCD_DATA01__GPIO3_IO06 0x4001b8b0
 				MX6UL_PAD_LCD_DATA00__GPIO3_IO05 0x4001b8b0
+			>;
+		};
+
+		pinctrl_i2c_gpio: i2cgrpgpio {
+			fsl,pins = <
+				MX6UL_PAD_LCD_DATA03__GPIO3_IO08 0x4001b8b0	/* HD1_I2C_CLK */
+				MX6UL_PAD_LCD_DATA04__GPIO3_IO09 0x4001b8b0 /* HD1_I2C_DAT */
 			>;
 		};
 
