Add custom 0x2d baseboard

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -359,6 +359,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6dl-ts4900-2.dtb \
 	imx6dl-ts4900-14.dtb \
 	imx6dl-ts4900-15.dtb \
+	imx6dl-ts4900-2d.dtb \
 	imx6dl-ts7970.dtb \
 	imx6dl-ts7990-lxd-revb.dtb \
 	imx6dl-ts7990-lxd.dtb \
@@ -437,6 +438,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6q-ts4900-2.dtb \
 	imx6q-ts4900-14.dtb \
 	imx6q-ts4900-15.dtb \
+	imx6q-ts4900-2d.dtb \
 	imx6q-ts7970.dtb \
 	imx6q-ts7990-lxd-revb.dtb \
 	imx6q-ts7990-lxd.dtb \
