--- a/arch/arm/boot/dts/imx6qdl-ts4900-2d.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-ts4900-2d.dtsi
@@ -79,8 +79,14 @@
 
 	pinctrl_misc: misc {
 		fsl,pins = <
-			MX6QDL_PAD_DISP0_DAT1__GPIO4_IO22      0x1b088 // EN_USB_5V
-			MX6QDL_PAD_EIM_A17__GPIO2_IO21         0x1b088 // OFF_BD_RESET#
+			MX6QDL_PAD_DISP0_DAT1__GPIO4_IO22	0x1b088 // EN_USB_5V
+			MX6QDL_PAD_EIM_A17__GPIO2_IO21		0x1b088 // OFF_BD_RESET#
+			MX6QDL_PAD_EIM_DA11__GPIO3_IO11		0x1b088 // OUT_1_3V
+			MX6QDL_PAD_EIM_DA10__GPIO3_IO10		0x1b088 // OUT_2_3V
+			MX6QDL_PAD_EIM_DA9__GPIO3_IO09		0x1b088 // OUT_3_3V
+			MX6QDL_PAD_EIM_DA7__GPIO3_IO07		0x1b088 // SEL_422_MODE
+			MX6QDL_PAD_EIM_DA5__GPIO3_IO05		0x1b088 // DIG_IN_1
+			MX6QDL_PAD_EIM_DA4__GPIO3_IO04		0x1b088 // DIG_IN_2
 		>;
 	};
 };
