--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -377,6 +377,7 @@ dtb-$(CONFIG_SOC_IMX6UL) += \
 	imx6ul-ts4100-2.dtb \
 	imx6ul-ts4100-2f.dtb \
 	imx6ul-ts4100-16.dtb \
+	imx6ul-ts7120.dtb \
 	imx6ul-ts7180.dtb \
 	imx6ul-ts718A.dtb \
 	imx6ul-ts7553v2.dtb \
