--- a/arch/arm/boot/dts/imx6ul-ts7120.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7120.dts
@@ -270,6 +270,33 @@
 	};
 };
 
+&weim {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_weim_fpga &pinctrl_weim_cs0>;
+	#address-cells = <1>;
+	#size-cells = <2>;
+	clocks = <&clks IMX6UL_CLK_EIM>, <&clks IMX6UL_CLK_EIM_SLOW_SEL>;
+	ranges = <0 0 0x50000000 0x08000000>;
+	status = "okay";
+
+	fpga: fpga@50000000 {
+			compatible = "simple-bus";
+			reg = <0 0x50000000 0x00010000>;
+			#address-cells = <1>;
+			#size-cells = <2>;
+
+			fsl,weim-cs-timing = <
+				0x0161030F	// EIM_CSnGCR1 @ 0x021b8000
+				0x00000000	// EIM_CSnGCR2 @ 0x021b8004
+				0x03000000	// EIM_CSnRCR1 @ 0x021b8008
+				0x00000077	// EIM_CSnRCR2 @ 0x021b800c
+				0x01000000  // EIM_CSnWCR1 @ 0x021b8010
+				0 				// EIM_CSnWCR2	@ 0x021b8014
+			>;
+
+		status = "okay";
+	 };
+};
 
 &snvs_poweroff {
 	status = "okay";
@@ -483,16 +510,7 @@
 				MX6UL_PAD_SD1_DATA3__USDHC1_DATA3 0x170f9
 			>;
 		};
-		pinctrl_usdhc2: usdhc2grp {
-			fsl,pins = <
-				MX6UL_PAD_NAND_RE_B__USDHC2_CLK     0x10069
-				MX6UL_PAD_NAND_WE_B__USDHC2_CMD     0x17059
-				MX6UL_PAD_NAND_DATA00__USDHC2_DATA0 0x17059
-				MX6UL_PAD_NAND_DATA01__USDHC2_DATA1 0x17059
-				MX6UL_PAD_NAND_DATA02__USDHC2_DATA2 0x17059
-				MX6UL_PAD_NAND_DATA03__USDHC2_DATA3 0x17059
-			>;
-		};
+
 
 		/******************************************************************/
 		/**** SPI (for WIFI/Bluetooth Module) ****/
@@ -511,6 +529,42 @@
 		pinctrl_dvfs: dvfsgrp {
 			fsl,pins = <
 				MX6UL_PAD_SNVS_TAMPER3__GPIO5_IO03	0x79	// GPIO_DVFS
+			>;
+		};
+
+
+		pinctrl_weim_cs0: weimcs0grp {
+			fsl,pins = <
+			//MX6UL_PAD_CSI_MCLK__GPIO4_IO17 	0x1b020			//  EIM_CS0
+				MX6UL_PAD_CSI_MCLK__EIM_CS0_B		0xb029
+			>;
+		};
+
+		pinctrl_weim_fpga: weimfpgagrp {
+			fsl,pins = <
+				MX6UL_PAD_CSI_PIXCLK__EIM_OE		0xb029			// EIM_OE#
+				MX6UL_PAD_CSI_VSYNC__EIM_RW		0xb029			// EIM_WE#
+				MX6UL_PAD_CSI_HSYNC__EIM_LBA_B		0xb029		// EIM_LBA#
+				MX6UL_PAD_NAND_ALE__GPIO4_IO10		0xb029		// EIM_IRQ
+				MX6UL_PAD_NAND_DQS__EIM_WAIT				0xb029	// EIM_WAIT
+				MX6UL_PAD_NAND_WP_B__EIM_BCLK			0xb029		// EIM_BCLK
+
+				MX6UL_PAD_NAND_DATA07__EIM_AD15		0xb029		// EIM_AD_15
+				MX6UL_PAD_NAND_DATA06__EIM_AD14		0xb029
+				MX6UL_PAD_NAND_DATA05__EIM_AD13		0xb029
+				MX6UL_PAD_NAND_DATA04__EIM_AD12		0xb029
+				MX6UL_PAD_NAND_DATA03__EIM_AD11		0xb029
+				MX6UL_PAD_NAND_DATA02__EIM_AD10		0xb029
+				MX6UL_PAD_NAND_DATA01__EIM_AD09		0xb029
+				MX6UL_PAD_NAND_DATA00__EIM_AD08		0xb029
+				MX6UL_PAD_CSI_DATA07__EIM_AD07		0xb029
+				MX6UL_PAD_CSI_DATA06__EIM_AD06		0xb029
+				MX6UL_PAD_CSI_DATA05__EIM_AD05		0xb029
+				MX6UL_PAD_CSI_DATA04__EIM_AD04		0xb029
+				MX6UL_PAD_CSI_DATA03__EIM_AD03		0xb029
+				MX6UL_PAD_CSI_DATA02__EIM_AD02		0xb029
+				MX6UL_PAD_CSI_DATA01__EIM_AD01 		0xb029
+				MX6UL_PAD_CSI_DATA00__EIM_AD00		0xb029		// EIM_AD_00
 			>;
 		};
 	};
