--- a/arch/arm/configs/tsimx6ul_defconfig
+++ b/arch/arm/configs/tsimx6ul_defconfig
@@ -543,23 +543,7 @@ CONFIG_ZD1211RW=m
 CONFIG_RSI_91X=m
 # CONFIG_RSI_DEBUGFS is not set
 # CONFIG_RSI_SDIO is not set
-CONFIG_RSI_USB=m
-CONFIG_WILC=m
-# CONFIG_WILC_SDIO is not set
 CONFIG_WILC_SPI=m
-# CONFIG_ATMEL_SMARTCONNECT is not set
-
-#
-# Enable WiMAX (Networking options) to see the WiMAX drivers
-#
-# CONFIG_WAN is not set
-# CONFIG_ISDN is not set
-
-#
-# Input device support
-#
-CONFIG_INPUT=y
-# CONFIG_INPUT_FF_MEMLESS is not set
 CONFIG_INPUT_POLLDEV=y
 # CONFIG_INPUT_MOUSEDEV_PSAUX is not set
 CONFIG_INPUT_JOYDEV=m
@@ -580,6 +564,9 @@ CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
 # CONFIG_LEGACY_PTYS is not set
 CONFIG_N_GSM=m
 # CONFIG_DEVKMEM is not set
+CONFIG_SERIAL_8250=m
+CONFIG_SERIAL_8250_NR_UARTS=9
+CONFIG_SERIAL_8250_RUNTIME_UARTS=9
 CONFIG_SERIAL_MAX3100_TS=m
 CONFIG_SERIAL_IMX=y
 CONFIG_SERIAL_IMX_CONSOLE=y
@@ -603,6 +590,7 @@ CONFIG_HSI_CHAR=m
 CONFIG_PPS_CLIENT_LDISC=m
 CONFIG_PPS_CLIENT_GPIO=m
 CONFIG_GPIO_SYSFS=y
+CONFIG_GPIO_TS7120=m
 CONFIG_GPIO_MAX732X=m
 CONFIG_GPIO_PCA953X=m
 CONFIG_GPIO_PCF857X=m
