--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -365,25 +365,25 @@ config SENSORS_BH1780
 	  will be called bh1780gli.
 
 config SENSORS_BH1770
-         tristate "BH1770GLC / SFH7770 combined ALS - Proximity sensor"
-         depends on I2C
-         ---help---
-           Say Y here if you want to build a driver for BH1770GLC (ROHM) or
-	   SFH7770 (Osram) combined ambient light and proximity sensor chip.
+		tristate "BH1770GLC / SFH7770 combined ALS - Proximity sensor"
+		depends on I2C
+		---help---
+		Say Y here if you want to build a driver for BH1770GLC (ROHM) or
+		SFH7770 (Osram) combined ambient light and proximity sensor chip.
 
-           To compile this driver as a module, choose M here: the
-           module will be called bh1770glc. If unsure, say N here.
+		To compile this driver as a module, choose M here: the
+		module will be called bh1770glc. If unsure, say N here.
 
 config SENSORS_APDS990X
 	 tristate "APDS990X combined als and proximity sensors"
 	 depends on I2C
 	 default n
 	 ---help---
-	   Say Y here if you want to build a driver for Avago APDS990x
-	   combined ambient light and proximity sensor chip.
+		Say Y here if you want to build a driver for Avago APDS990x
+		combined ambient light and proximity sensor chip.
 
-	   To compile this driver as a module, choose M here: the
-	   module will be called apds990x. If unsure, say N here.
+		To compile this driver as a module, choose M here: the
+		module will be called apds990x. If unsure, say N here.
 
 config HMC6352
 	tristate "Honeywell HMC6352 compass"
@@ -548,4 +548,6 @@ source "drivers/misc/mic/Kconfig"
 source "drivers/misc/genwqe/Kconfig"
 source "drivers/misc/echo/Kconfig"
 source "drivers/misc/cxl/Kconfig"
+source "drivers/misc/ts-fpga/Kconfig"
+
 endmenu
