--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -514,7 +514,7 @@ config GPIO_TS7120
 	bool "Technologic Systems FPGA GPIO"
 	depends on IMX_WEIM
 	help
-	  Say yes here to enabled the GPIO driver for Technologic's FPGA core.
+	  Say yes here to enable the GPIO driver for Technologic's FPGA core.
 	  Supports TS-7120 only.  It requires the driver to be built in the
 	  kernel.
 
