--- a/arch/arm/configs/tsimx6ul_defconfig
+++ b/arch/arm/configs/tsimx6ul_defconfig
@@ -586,6 +586,7 @@ CONFIG_I2C_IMX=y
 CONFIG_SPI=y
 CONFIG_SPI_GPIO=y
 CONFIG_SPI_IMX=y
+CONFIG_SPI_OCORES=m
 CONFIG_SPI_SPIDEV=y
 CONFIG_HSI=m
 CONFIG_HSI_CHAR=m
