--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -120,13 +120,13 @@ config SPI_BCM53XX
 	depends on BCMA_POSSIBLE
 	select BCMA
 	help
-          Enable support for the SPI controller on Broadcom BCM53xx ARM SoCs.
+			 Enable support for the SPI controller on Broadcom BCM53xx ARM SoCs.
 
 config SPI_BCM63XX
 	tristate "Broadcom BCM63xx SPI controller"
 	depends on BCM63XX
 	help
-          Enable support for the SPI controller on the Broadcom BCM63xx SoCs.
+			 Enable support for the SPI controller on the Broadcom BCM63xx SoCs.
 
 config SPI_BCM63XX_HSSPI
 	tristate "Broadcom BCM63XX HS SPI controller driver"
@@ -186,14 +186,14 @@ config SPI_DAVINCI
 	  SPI master controller for DaVinci/DA8x/OMAP-L/AM1x SPI modules.
 
 config SPI_DLN2
-       tristate "Diolan DLN-2 USB SPI adapter"
-       depends on MFD_DLN2
-       help
-         If you say yes to this option, support will be included for Diolan
-         DLN2, a USB to SPI interface.
+		 tristate "Diolan DLN-2 USB SPI adapter"
+		 depends on MFD_DLN2
+		 help
+			If you say yes to this option, support will be included for Diolan
+			DLN2, a USB to SPI interface.
 
-         This driver can also be built as a module.  If so, the module
-         will be called spi-dln2.
+			This driver can also be built as a module.  If so, the module
+			will be called spi-dln2.
 
 config SPI_EFM32
 	tristate "EFM32 SPI controller"
@@ -338,6 +338,11 @@ config SPI_OCTEON
 	help
 	  SPI host driver for the hardware found on some Cavium OCTEON
 	  SOCs.
+
+config SPI_OCORES
+	tristate "OpenCores SPI Controller"
+	help
+	  This enables using the OpenCores SPI controller.
 
 config SPI_OMAP_UWIRE
 	tristate "OMAP1 MicroWire"
