Add HDMI to defconfig

--- a/arch/arm/configs/ts4900_defconfig
+++ b/arch/arm/configs/ts4900_defconfig
@@ -4313,10 +4313,10 @@ CONFIG_FB_MXC=y
 CONFIG_FB_MXC_SYNC_PANEL=y
 CONFIG_FB_MXC_OVERLAY=y
 # CONFIG_FB_MXC_MIPI_DSI is not set
-# CONFIG_FB_MXC_LDB is not set
-# CONFIG_FB_MXC_HDMI is not set
+CONFIG_FB_MXC_LDB=y
+CONFIG_FB_MXC_HDMI=y
 CONFIG_FB_MXC_EDID=y
-# CONFIG_FB_MXC_DCIC is not set
+CONFIG_FB_MXC_DCIC=y
 # CONFIG_FB_MXC_ADV7535 is not set
 # CONFIG_HANNSTAR_CABC is not set
 # CONFIG_FB_MXC_EINK_PANEL is not set
@@ -4352,6 +4352,7 @@ CONFIG_BACKLIGHT_PWM=y
 # CONFIG_BACKLIGHT_LV5207LP is not set
 # CONFIG_BACKLIGHT_BD6107 is not set
 # CONFIG_VGASTATE is not set
+CONFIG_VIDEOMODE_HELPERS=y
 CONFIG_HDMI=y
 
 #
@@ -5079,6 +5080,7 @@ CONFIG_MXC_VPU=y
 #
 # MXC HDMI CEC (Consumer Electronics Control) support
 #
+# CONFIG_MXC_HDMI_CEC is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_CLASS_FLASH is not set
